<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_statistics"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.avinashdavid.trivialtrivia.UI.ActivityStatistics"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
                                       android:layout_width="match_parent"
                                       android:layout_height="?attr/actionBarSize"
                                       android:background="@color/colorPrimary"
                                       android:layout_alignParentTop="true"
                                       android:elevation="4dp"
                                       app:title="@string/statistics"
                                       android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                                       app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <ScrollView
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/overall_performance"
                style="@style/StatsTitles"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_quizzes"
                style="@style/StatsLabels"/>
            <TextView
                android:id="@+id/total_quizzes_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/StatsContent"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/highest_score"
                style="@style/StatsLabels"/>
            <TextView
                android:id="@+id/highest_score_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/StatsContent"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/perfect_quizzes"
                style="@style/StatsLabels"/>
            <TextView
                android:id="@+id/perfect_quizzes_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/StatsContent"/>

            <!--divider here-->
            <!--<include layout="@layout/divider"></include>-->

            <!--<TextView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/averages"-->
                <!--style="@style/StatsTitles"/>-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/average_score"
                style="@style/StatsLabels"/>
            <TextView
                android:id="@+id/average_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/StatsContent"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/average_time_right"
                style="@style/StatsLabels"/>
            <TextView
                android:id="@+id/average_time_right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/StatsContent"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/average_time_wrong"
                style="@style/StatsLabels"/>
            <TextView
                android:id="@+id/average_time_wrong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/StatsContent"/>

            <!--divider here-->
            <include layout="@layout/divider"></include>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category_records"
                style="@style/StatsTitles"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/best_category"
                style="@style/StatsLabels"/>
            <TextView
                android:id="@+id/best_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/StatsContent"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/worst_category"
                style="@style/StatsLabels"/>
            <TextView
                android:id="@+id/worst_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/StatsContent"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/full_stats_for"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/FullStatistics"
                    android:paddingRight="@dimen/half_margin"
                    android:paddingEnd="@dimen/half_margin"/>

                <Spinner
                    android:id="@+id/spinner_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/activity_vertical_margin">

                </Spinner>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/category_stats_linearlayout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/total_questions_answered"
                    style="@style/StatsLabels"/>
                <TextView
                    android:id="@+id/total_questions_answered"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/StatsContent"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/correctly_answered"
                    style="@style/StatsLabels"/>
                <TextView
                    android:id="@+id/correctly_answered"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/StatsContent"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/percentage_score"
                    style="@style/StatsLabels"/>
                <TextView
                    android:id="@+id/percentage_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/StatsContent"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/average_time_overall"
                    style="@style/StatsLabels"/>
                <TextView
                    android:id="@+id/average_time_overall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/StatsContent"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/average_time_right"
                    style="@style/StatsLabels"/>
                <TextView
                    android:id="@+id/average_time_right_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/StatsContent"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/average_time_wrong"
                    style="@style/StatsLabels"/>
                <TextView
                    android:id="@+id/average_time_wrong_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/StatsContent"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
