<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_acknowledgments"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.avinashdavid.trivialtrivia.UI.ActivityAcknowledgments"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
                                       android:layout_width="match_parent"
                                       android:layout_height="?attr/actionBarSize"
                                       android:background="@color/colorPrimary"
                                       android:layout_alignParentTop="true"
                                       android:elevation="4dp"
                                       app:title="@string/acknowledgements"
                                       android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                                       app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <ScrollView
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/content_acknowledgments"
                style="@style/StatsTitles"/>

            <ListView
                android:id="@+id/listview_content_acknowledgments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/image_acknowledgments"
                style="@style/StatsTitles"/>

            <ListView
                android:id="@+id/listview_image_acknowledgments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
